# interview_coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: rag_test.py
src/interview_coach/: main.py  questions_flow.py
src/interview_coach/api/: __init__.py  evaluation_service.py  interview_service.py  main.py  models.py  routes.py  session_manager.py
src/interview_coach/crews/evaluation_crew/: __init__.py  evaluation_crew.py
src/interview_coach/crews/evaluation_crew/config/: agents.yaml  tasks.yaml
src/interview_coach/crews/interview_crew/: __init__.py  interview_crew.py
src/interview_coach/crews/interview_crew/config/: agents.yaml  tasks.yaml
src/interview_coach/crews/supervisor_crew/: supervisor_crew.py
src/interview_coach/crews/supervisor_crew/config/: agents.yaml  tasks.yaml
src/interview_coach/tools/: __init__.py  resume_retrieval_tool.py
src/rag/: __init__.py  gemini_embeddings.py  rag_config.py  rag_service.py  rag_utils.py
tests/: rag_test.py  run.py
